--- a/index.html
+++ b/index.html
@@ -3,118 +3,128 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Карта лагеря</title>
+  <title>Карта лагеря — кликабельные зоны</title>
   <style>
-    :root { --brand:#CF2C02; --house:#0aa; }
+    :root { --brand:#CF2C02; --brand2:#FFBA08; --brand3:#E85D04; }
     * { box-sizing:border-box }
-    html,body { margin:0; background:#fff; font-family:system-ui, Arial, sans-serif; }
-    .map { max-width:1200px; margin:0 auto; }
-    svg { display:block; width:100%; height:auto; background:#fff; }
-    image { pointer-events:none; } /* клики проходят в зоны */
+    html,body{ margin:0; background:#fff; font-family:system-ui, Arial, sans-serif; }
+    .map{ max-width:1200px; margin:0 auto; }
+    svg{ display:block; width:100%; height:auto; }
+    image{ pointer-events:none; } /* клики проходят сквозь */
 
-    /* Зоны — невидимы, но кликабельны */
-    .hotspot {
-      fill: transparent;
-      stroke: transparent;
-      stroke-width: 2;
-      cursor: pointer;
-      vector-effect: non-scaling-stroke;
-      transition: fill .18s ease, stroke .18s ease;
+    /* Невидимые, но кликабельные зоны */
+    .hotspot{
+      fill:transparent; stroke:transparent; stroke-width:2;
+      cursor:pointer; vector-effect:non-scaling-stroke;
+      transform-box: fill-box; transform-origin: center;
+      transition: stroke .18s ease, opacity .18s ease;
     }
-    /* Лёгкая подсветка при наведении (ПК) */
-    a:hover .hotspot[data-type="label"] { fill: rgba(207,44,2,.14); }
-    a:hover .hotspot[data-type="house"] { fill: rgba(0,170,170,.14); }
+    /* Еле заметная подсветка при ховере на ПК */
+    a:hover .hotspot[data-type="label"]{ stroke:rgba(207,44,2,.35); }
+    a:hover .hotspot[data-type="house"]{ stroke:rgba(0,170,170,.35); }
 
-    /* Активная подсветка на клик */
-    .glow-label { fill: rgba(207,44,2,.18) !important; stroke: rgba(207,44,2,.6) !important; }
-    .glow-house { fill: rgba(0,170,170,.18) !important; stroke: rgba(0,170,170,.6) !important; }
-
-    /* SVG ripple (всплеск) */
-    .ripple {
-      fill: none;
-      stroke: var(--brand);
-      stroke-width: 3;
-      opacity: .6;
-      transform-origin: center;
-      animation: ripple .45s ease-out forwards;
-      pointer-events: none;
-    }
-    @keyframes ripple {
-      from { r: 0; opacity: .6; }
-      to   { r: 140; opacity: 0; }
+    /* Аккуратный пульс и контур при клике */
+    .outline-label{ stroke:rgba(207,44,2,.7) !important; }
+    .outline-house{ stroke:rgba(0,170,170,.7) !important; }
+    .pulse{ animation:pulse .42s ease-out; }
+    @keyframes pulse{
+      0%{ transform:scale(1) } 50%{ transform:scale(1.04) } 100%{ transform:scale(1) }
     }
 
-    /* Убираем синие хайлайты на таче */
-    a, svg, image, .hotspot {
-      -webkit-tap-highlight-color: transparent;
-      outline: none;
+    /* Маленький ripple */
+    .ripple{
+      fill:none; stroke:var(--brand); stroke-width:3; opacity:.6;
+      animation:ripple .45s ease-out forwards; pointer-events:none;
     }
+    @keyframes ripple{
+      from{ r:0; opacity:.6 } to{ r:70; opacity:0 }
+    }
+
+    /* Искры */
+    .spark{
+      fill: currentColor; opacity:.9;
+      animation: spark .6s ease-out forwards; pointer-events:none;
+    }
+    @keyframes spark{
+      from{ transform: translate(0,0) scale(1); opacity:.9 }
+      to  { transform: translate(var(--dx),var(--dy)) scale(.4); opacity:0 }
+    }
+
+    /* Тост-подсказка у пальца/мыши */
+    #toast{
+      position: fixed; z-index: 20; pointer-events: none;
+      background:#fff; color:#111; border:1px solid rgba(0,0,0,.1);
+      box-shadow: 0 6px 20px rgba(0,0,0,.12);
+      padding:.45rem .7rem; border-radius:10px; font-size:14px; opacity:0;
+      transform: translate(-50%,-140%); transition: opacity .18s ease, transform .18s ease;
+      white-space: nowrap;
+    }
+    #toast.show{ opacity:1; transform: translate(-50%,-160%) }
+
+    /* Убираем синий хайлайт */
+    a, svg, image, .hotspot{ -webkit-tap-highlight-color: transparent; outline: none; }
   </style>
 </head>
 <body>
   <div class="map">
-    <!-- Замените href на имя файла вашей карты, если не camp-map.jpg -->
+    <div id="toast"></div>
+
     <svg id="camp" viewBox="0 0 1536 1156" preserveAspectRatio="xMidYMid meet" aria-label="Интерактивная карта лагеря">
       <image href="camp-map.jpg" width="1536" height="1156" />
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696518" target="_blank" rel="noopener" aria-label="Столовая">
         <title>Столовая</title>
-        <rect class="hotspot" data-type="label" data-id="label-stolovaya" x="183.61602783203125" y="366.9920349121094" width="332.9919738769531" height="92.01593017578125" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-stolovaya" points="345.6000061035156,198.80001831054688 570.6000061035156,198.80001831054688 730.6240234375,315.64801025390625 356.864013671875,385.2799987792969 315.6000061035156,313.8000183105469"/>
+        <rect class="hotspot" data-type="label" x="183.61602783203125" y="366.9920349121094" width="332.9919738769531" height="92.01593017578125" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="345.6000061035156,198.80001831054688 570.6000061035156,198.80001831054688 730.6240234375,315.64801025390625 356.864013671875,385.2799987792969 315.6000061035156,313.8000183105469"/>
       </a>
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696520" target="_blank" rel="noopener" aria-label="Спортивный зал">
         <title>Спортивный зал</title>
-        <rect class="hotspot" data-type="label" data-id="label-sport" x="621.2960205078125" y="528.8800659179688" width="375" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-sport" points="584.1919555664062,388.35198974609375 782.8479614257812,361.7279968261719 829.9519653320312,530.6880493164062 580.0960083007812,577.7919921875 502.27197265625,492.79998779296875"/>
+        <rect class="hotspot" data-type="label" x="621.2960205078125" y="528.8800659179688" width="375" height="88" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="584.1919555664062,388.35198974609375 782.8479614257812,361.7279968261719 829.9519653320312,530.6880493164062 580.0960083007812,577.7919921875 502.27197265625,492.79998779296875"/>
       </a>
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696522" target="_blank" rel="noopener" aria-label="Дискотека">
         <title>Дискотека</title>
-        <rect class="hotspot" data-type="label" data-id="label-disco" x="956.927978515625" y="357.1359558105469" width="402.4161376953125" height="92.65603637695312" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-disco" points="987.64794921875,189.6959991455078 1236.47998046875,234.75201416015625 1117.6959228515625,497.91998291015625 887.2960205078125,412.9280090332031"/>
+        <rect class="hotspot" data-type="label" x="956.927978515625" y="357.1359558105469" width="402.4161376953125" height="92.65603637695312" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="987.64794921875,189.6959991455078 1236.47998046875,234.75201416015625 1117.6959228515625,497.91998291015625 887.2960205078125,412.9280090332031"/>
       </a>
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696523" target="_blank" rel="noopener" aria-label="Палаты">
         <title>Палаты</title>
-        <rect class="hotspot" data-type="label" data-id="label-palaty" x="110.70404052734375" y="649.8399658203125" width="330" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-palaty" points="166.33599853515625,489.31195068359375 406.33599853515625,489.31195068359375 592.3839721679688,638.2080078125 127.48798370361328,641.2799682617188"/>
+        <rect class="hotspot" data-type="label" x="110.70404052734375" y="649.8399658203125" width="330" height="88" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="166.33599853515625,489.31195068359375 406.33599853515625,489.31195068359375 592.3839721679688,638.2080078125 127.48798370361328,641.2799682617188"/>
       </a>
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696533" target="_blank" rel="noopener" aria-label="Беседка">
         <title>Беседка</title>
-        <rect class="hotspot" data-type="label" data-id="label-besedka" x="116.46401977539062" y="1011.1680908203125" width="300" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-besedka" points="182,884 267.7760009765625,831.7440185546875 409.0879821777344,964.864013671875 185.85598754882812,1006.8480224609375"/>
+        <rect class="hotspot" data-type="label" x="116.46401977539062" y="1011.1680908203125" width="300" height="88" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="182,884 267.7760009765625,831.7440185546875 409.0879821777344,964.864013671875 185.85598754882812,1006.84802265625"/>
       </a>
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696534" target="_blank" rel="noopener" aria-label="Кинозал">
         <title>Кинозал</title>
-        <rect class="hotspot" data-type="label" data-id="label-cinema" x="1053.887939453125" y="622.8639526367188" width="331" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-cinema" points="1145.3441162109375,482.55999755859375 1329.6640625,461.0559997558594 1338.8800048828125,628.9920043945312 1137.50390625,617.2160034179688"/>
+        <rect class="hotspot" data-type="label" x="1053.887939453125" y="622.8639526367188" width="331" height="88" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="1145.3441162109375,482.55999755859375 1329.6640625,461.0559997558594 1338.8800048828125,628.9920043945312 1137.50390625,617.2160034179688"/>
       </a>
 
       <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696535" target="_blank" rel="noopener" aria-label="Комната отдыха">
         <title>Комната отдыха</title>
-        <rect class="hotspot" data-type="label" data-id="label-rooms" x="886.0640869140625" y="897.280029296875" width="472.2718505859375" height="162.0159912109375" rx="16"/>
-        <polygon class="hotspot" data-type="house" data-id="house-rooms" points="969.072021484375,783.7760009765625 1253.887939453125,805.1199951171875 1263.10400390625,954.6240234375 947.7119750976562,960.7680053710938"/>
+        <rect class="hotspot" data-type="label" x="886.0640869140625" y="897.280029296875" width="472.2718505859375" height="162.0159912109375" rx="16"/>
+        <polygon class="hotspot" data-type="house" points="969.072021484375,783.7760009765625 1253.887939453125,805.1199951171875 1263.10400390625,954.6240234375 947.7119750976562,960.7680053710938"/>
       </a>
 
-      <!-- слой для ряпла -->
+      <!-- слой для эффектов -->
       <g id="fx"></g>
     </svg>
   </div>
 
   <script>
     const svg = document.getElementById('camp');
-    const fx = document.getElementById('fx');
+    const fx  = document.getElementById('fx');
+    const toast = document.getElementById('toast');
+    const sparkColors = ['var(--brand)','var(--brand2)','var(--brand3)'];
 
-    // Исходный viewBox
-    const base = { x:0, y:0, w:1536, h:1156 };
-
-    // Еasing
-    const ease = t => t<.5 ? 4*t*t*t : 1 - Math.pow(-2*t+2, 3)/2;
-
-    // Координаты клика в системе SVG
     function svgPoint(evt){
       const pt = svg.createSVGPoint();
       const e = evt.touches ? evt.touches[0] : evt;
@@ -122,94 +132,76 @@
       return pt.matrixTransform(svg.getScreenCTM().inverse());
     }
 
-    // Обработчик клика по ссылке
-    svg.addEventListener('click', (e)=>{
-      const a = e.target.closest('a');
-      if(!a) return;
+    function showToast(text, clientX, clientY){
+      toast.textContent = text + ' →';
+      const vw = Math.max(document.documentElement.clientWidth, window.innerWidth||0);
+      const vh = Math.max(document.documentElement.clientHeight, window.innerHeight||0);
+      toast.style.left = Math.min(Math.max(16, clientX), vw-16) + 'px';
+      toast.style.top  = Math.min(Math.max(16, clientY), vh-16) + 'px';
+      toast.classList.add('show');
+      setTimeout(()=>toast.classList.remove('show'), 520);
+    }
 
-      e.preventDefault(); // свои эффекты + затем навигация
-      // Вибро (мобилки)
-      if (navigator.vibrate) navigator.vibrate(15);
-
-      // Подсветка зоны (внутри выбранного <a>)
-      const zones = a.querySelectorAll('.hotspot');
-      zones.forEach(z=>{
-        const cls = z.dataset.type === 'label' ? 'glow-label' : 'glow-house';
-        z.classList.add(cls);
-        setTimeout(()=>z.classList.remove(cls), 300);
-      });
-
-      // Ripple в точке клика
-      const p = svgPoint(e);
+    function ripple(x,y){
       const c = document.createElementNS('http://www.w3.org/2000/svg','circle');
       c.setAttribute('class','ripple');
-      c.setAttribute('cx', p.x);
-      c.setAttribute('cy', p.y);
-      c.setAttribute('r', 0);
+      c.setAttribute('cx', x); c.setAttribute('cy', y); c.setAttribute('r', 0);
       fx.appendChild(c);
       setTimeout(()=>c.remove(), 500);
-
-      // Мягкий зум к зоне
-      const bbox = unionBBox(zones);
-      animateViewBoxTo(bbox, 360, () => {
-        // навигация после анимации (короткая задержка = не блокируется)
-        const href = a.getAttribute('href');
-        const target = a.getAttribute('target') || '_self';
-        if (target === '_blank') {
-          window.open(href, '_blank', 'noopener');
-        } else {
-          location.href = href;
-        }
-      });
-    }, false);
-
-    // Считаем объединённый bbox для набора зон
-    function unionBBox(nodeList){
-      let minX=Infinity, minY=Infinity, maxX=-Infinity, maxY=-Infinity;
-      nodeList.forEach(n=>{
-        const b = n.getBBox();
-        minX = Math.min(minX, b.x);
-        minY = Math.min(minY, b.y);
-        maxX = Math.max(maxX, b.x + b.width);
-        maxY = Math.max(maxY, b.y + b.height);
-      });
-      // Немного паддинга
-      const pad = Math.max((maxX-minX), (maxY-minY)) * 0.20;
-      minX -= pad; minY -= pad; maxX += pad; maxY += pad;
-
-      // Ограничим в пределах исходного viewBox
-      minX = Math.max(base.x, minX);
-      minY = Math.max(base.y, minY);
-      maxX = Math.min(base.x + base.w, maxX);
-      maxY = Math.min(base.y + base.h, maxY);
-
-      return { x:minX, y:minY, w:maxX-minX, h:maxY-minY };
     }
 
-    // Анимация viewBox
-    function animateViewBoxTo(target, dur=360, done){
-      const vb0 = svg.viewBox.baseVal;
-      const start = { x: vb0.x, y: vb0.y, w: vb0.width, h: vb0.height };
-      const t0 = performance.now();
-
-      function frame(t){
-        const k = Math.min(1, (t - t0) / dur);
-        const e = ease(k);
-        const x = lerp(start.x, target.x, e);
-        const y = lerp(start.y, target.y, e);
-        const w = lerp(start.w, target.w, e);
-        const h = lerp(start.h, target.h, e);
-        svg.setAttribute('viewBox', `${x} ${y} ${w} ${h}`);
-        if(k < 1) {
-          requestAnimationFrame(frame);
-        } else {
-          // небольшой таймаут, чтобы всплеск успел «сойти»
-          setTimeout(done, 40);
-        }
+    function sparks(x,y,count=12){
+      for(let i=0;i<count;i++){
+        const dx = (Math.random()*120-60), dy=(Math.random()*120-60);
+        const s = document.createElementNS('http://www.w3.org/2000/svg','circle');
+        s.setAttribute('class','spark');
+        s.setAttribute('cx', x); s.setAttribute('cy', y);
+        s.setAttribute('r', 3 + Math.random()*2);
+        s.style.setProperty('--dx', dx+'px');
+        s.style.setProperty('--dy', dy+'px');
+        s.style.color = sparkColors[Math.floor(Math.random()*sparkColors.length)];
+        fx.appendChild(s);
+        setTimeout(()=>s.remove(), 650);
       }
-      requestAnimationFrame(frame);
     }
-    function lerp(a,b,t){ return a + (b-a)*t; }
+
+    svg.addEventListener('click', (e)=>{
+      const anchor = e.target.closest('a');
+      if(!anchor) return;
+      e.preventDefault();
+
+      // вибрация
+      if(navigator.vibrate) navigator.vibrate(15);
+
+      // название из <title>
+      const name = anchor.querySelector('title')?.textContent || 'Локация';
+
+      // геометрии зоны
+      const zones = anchor.querySelectorAll('.hotspot');
+      zones.forEach(z=>{
+        const outline = z.dataset.type==='label' ? 'outline-label' : 'outline-house';
+        z.classList.add('pulse', outline);
+        setTimeout(()=>z.classList.remove('pulse', outline), 380);
+      });
+
+      // эффекты в точке клика
+      const p = svgPoint(e);
+      ripple(p.x, p.y);
+      sparks(p.x, p.y, 14);
+
+      // тост у пальца/мыши
+      const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+      const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+      showToast(name, clientX, clientY);
+
+      // переход спустя короткую паузу
+      const href = anchor.getAttribute('href');
+      const target = anchor.getAttribute('target') || '_self';
+      setTimeout(()=>{
+        if(target==='_blank'){ window.open(href,'_blank','noopener'); }
+        else{ location.href = href; }
+      }, 360);
+    }, {passive:false});
   </script>
 </body>
-  </html>
+</html>
