--- a/index.html
+++ b/index.html
@@ -110,13 +110,12 @@
         <polygon class="hotspot" data-type="fire"
                  points="760,675 790,625 820,675 845,665 835,695 855,715 820,720 805,745 785,720 750,710"/>
       </a>
-
-      <!-- УТКИ (звук: ducks.mp3, 3 сек) — эллипс над прудом -->
-      <a href="#" aria-label="Утки" data-sound="ducks">
-        <title>Утки</title>
-        <ellipse class="hotspot" cx="820" cy="560" rx="120" ry="70"/>
-      </a>
-
+      <!-- УТКИ (звук: ducks.mp3, 3 сек) — правее Комнаты отдыха, справа снизу -->
+<a href="#" aria-label="Утки" data-sound="ducks">
+  <title>Утки</title>
+  <!-- Подгоните при необходимости: cx (вправо/влево), cy (вверх/вниз) -->
+  <ellipse class="hotspot" cx="1380" cy="1000" rx="110" ry="70"/>
+</a>
       <!-- слой для эффектов -->
       <g id="fx"></g>
     </svg>
